tests/bad/syntax/059-case-6.clap
val x = 
  case { Some at [ _ ] => 42 }

